# kazen_proto

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
base/: mat.h  types.h  utils.h  vec.h
cmake/: FindASSIMP.cmake  FindFMT.cmake  FindFrozen.cmake  FindOCIO.cmake  FindOIIO.cmake  FindOSL.cmake  FindOpenEXR.cmake  FindTBB.cmake  cuda_macros.cmake
cmake/modules/: FindASSIMP.cmake  FindEigen3.cmake  FindEnoki.cmake  FindOIIO.cmake  FindOSL.cmake  FindOpenEXR.cmake  FindOptiX.cmake  FindPCG32.cmake  FindPugixml.cmake
core/: aabb.h  accel.cpp  accel.h  camera.h  film.cpp  film.h  hitable.h  integrator.cpp  integrator.h  intersection.h  light.cpp  light.h  material.cpp  material.h  pixel.h  ray.h  sampling.h  shape.cpp  shape.h  spectrum.h  state.h  transform.h
plugin/: CMakeLists.txt
proto/: main.cpp
resource/scene/: test_scene.xml
resource/scene/ajax/: ajax.xml  ajax_bssrdf.xml  ajax_rough.xml  ajax_smooth.xml  rough.osl
resource/scene/cbox/: area.osl  cbox_ems.xml  cbox_mats.xml  cbox_microfacet.xml  cbox_mis.xml  cbox_whitted.xml  dielectric.osl  diffuse.osl  mirror.osl  rough.osl
resource/scene/cornell_box/: cornell_box.xml  emitter.osl
resource/scene/dragon/: dragon_bssrdf.xml
resource/scene/embree_test/: cornell_box.xml
resource/scene/simple_test/: test_scene.xml
resource/scene/textured_cornell_box/: checkerboard.osl  cornell_box.xml  test.tif  textured_matte.osl
resource/scene/veach_mi/: rough.osl  veach_mats.xml
resource/shader/: kp_extension.h.in  stdosl.h
resource/shader/builtins/: principle.osl
resource/shader/include/: kp_extension.h  kp_extension.h.in
resource/shader/src/: bump.osl  disney_brdf.osl  emissive.osl  env.osl  lambert.osl  principle.osl  standard_dipole.osl  ward.osl  wax.osl
src/base/: basic_types.h  casts.h  config.h.in  dictlike.h  dpdf.h  dual.h  fp.h  mat.h  microfacet.h  mis.h  span.h  traits.h  utils.h  vec.h
src/binding/: CMakeLists.txt  api.cpp  base_types.cpp  binding.cpp  bsdfs.cpp  bssrdfs.cpp  microfacet.cpp  osltools.cpp  sampler.cpp  utils.cpp  utils.h
src/core/: aabb.h  accel.cpp  accel.h  camera.cpp  camera.h  film.cpp  film.h  hitable.h  integrator.cpp  integrator.h  intersection.h  light.cpp  light.h  light_path.cpp  light_path.h  material.cpp  material.h  optix_utils.cpp  optix_utils.h  pixel.h  ray.cpp  ray.h  renderer.cpp  renderer.h  sampler.cpp  sampler.h  sampling.h  scene.cpp  scene.h  shape.cpp  shape.h  spectrum.h  transform.h
src/device/optix/: device_config.h  kernels.cu  kernels_pt.cu  kernels_triangle.cu  render_lib.cu
src/kernel/: hostutils.h  mathutils.h  oslutils.h  types.h  vec_math.h
src/kernel/device/optix/: device_config.h  kernels.cu  kernels_pt.cu  kernels_triangle.cu  render_lib.h
src/kernel/integrator/: shade_surface.h
src/proto/: main.cpp  optix_main.cpp
src/shading/: bsdf.cpp  bsdf.h  bsdfs.cpp  bsdfs.h  bssrdfs.cpp  bssrdfs.h  closure_function.cpp  closure_function.h  closures.cpp  closures.h  compiler.cpp  compiler.h  context.h  fresnel.h  microfacet.cpp  microfacet.h  querier.cpp  querier.h  renderservices.cpp  renderservices.h  shader.cpp  shader.h  white_furnace.cpp  white_furnace.h
tests/: CMakeLists.txt  film_test.cpp  intersection_test.cpp  mat_test.cpp  shape_test.cpp  vec_test.cpp
tests/basic_tests/: CMakeLists.txt  dual_tests.cpp  mat_tests.cpp  variant_tests.cpp  vec_tests.cpp
tests/binding_tests/: CMakeLists.txt  scene_api_test.cpp  scene_test.py
tests/libusage_tests/: CMakeLists.txt  embree_tests.cpp  ocio_tests.cpp  optix_tests.cpp  solid.cu  solid.h
tests/render_tests/: CMakeLists.txt  bssrdf_tests.cpp  dictlike_tests.cpp  integrator_tests.cpp  microfacet_tests.cpp  renderer_tests.cpp  scene_parse_tests.cpp
tests/unittests/: CMakeLists.txt  camera_attributes.xml  dictlike_tests.cpp  integrator_tests.cpp  scene_parse_tests.cpp  serialization_tests.cpp
